--- a/styles/login.css
+++ b/styles/login.css
@@ -36,7 +36,7 @@
     width: 80%;
     justify-content: center;
     height: 75px;
-    position: absolute;
+    position: fixed;
     bottom: 100px;
 }
 
