--- a/styles/login.css
+++ b/styles/login.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     gap: 40px;
-    position: fixed;
+    position: absolute;
 }
 
 .form__div form {
@@ -27,7 +27,7 @@
 
 .span__divLogos {
     position: fixed;
-    bottom: 220px;
+    bottom: 190px;
 }
 
 .main__div--logos {
