--- a/styles/login.css
+++ b/styles/login.css
@@ -1,3 +1,7 @@
+main {
+    position: relative;
+}
+
 .form__div {
     display: flex;
     width: 95%;
@@ -5,6 +9,7 @@
     flex-direction: column;
     align-items: center;
     gap: 40px;
+    top: 250px;
     position: absolute;
 }
 
@@ -26,7 +31,7 @@
 }
 
 .span__divLogos {
-    position: fixed;
+    position: absolute;
     bottom: 190px;
 }
 
@@ -36,7 +41,7 @@
     width: 80%;
     justify-content: center;
     height: 75px;
-    position: fixed;
+    position: absolute;
     bottom: 100px;
 }
 
