--- a/styles/login.css
+++ b/styles/login.css
@@ -1,5 +1,14 @@
 main {
-    position: relative;
+    display: flex;
+    height: 100vh;
+    width: 90%;
+    max-width: 1200px;
+    gap: 20px;
+    margin: 0 auto;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 .form__div {
@@ -9,8 +18,6 @@ main {
     flex-direction: column;
     align-items: center;
     gap: 40px;
-    top: 200px;
-    position: absolute;
 }
 
 .form__div form {
@@ -31,8 +38,8 @@ main {
 }
 
 .span__divLogos {
-    position: absolute;
-    bottom: 150px;
+    position: fixed;
+    bottom: 120px;
 }
 
 .main__div--logos {
@@ -41,8 +48,8 @@ main {
     width: 80%;
     justify-content: center;
     height: 75px;
-    position: absolute;
-    bottom: 80px;
+    position: fixed;
+    bottom: 40px;
 }
 
 .main__div--logos img {
@@ -59,7 +66,7 @@ main {
     /* min-height: 100vh; */
     z-index: 2;
     /* position: fixed; */
-    display: flex;
+    display: none;
     width: 95%;
     max-width: 620px;
     height: 580px;
