--- a/styles/login.css
+++ b/styles/login.css
@@ -48,7 +48,7 @@ main {
     width: 80%;
     justify-content: center;
     height: 75px;
-    position: fixed;
+    position: absolute;
     bottom: 40px;
 }
 
@@ -113,5 +113,43 @@ main {
     position: absolute;
     top: 20px;
     right: 25px;
+    cursor: pointer;
+}
+
+.modalForgot__div {
+    position: relative;
+    display: flex;
+    width: 95%;
+    max-width: 620px;
+    height: 580px;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 12px;
+    gap: 40px;
+    top: -150%;
+    justify-content: center;
+}
+
+.modalForgot__div h1, h2 {
+    text-align: center;
+}
+
+.modalForgot__div form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.modalForgot__div form input {
+    width: 90%;
+    max-width: 390px;
+    height: 47px;
+    border-radius: 12px;
+    border: 1px white solid;
+    color: #FFF;
+}
+
+.closeModalForgot {
     cursor: pointer;
 }
